[package]
name = "dot_"
version = "0.2.4"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
documentation = "https://github.com/sugiura-hiromichi/dot"
homepage = "https://github.com/sugiura-hiromichi/dot"
license = "MIT"
readme = "README.md"
repository = "https://github.com/sugiura-hiromichi/dot"
description = "my personal dotfiles manager"

[dependencies]
anyhow = "1.0"
clap = { version = "4", features = ["derive"] }
mylibrary_ = "1"
